--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -1,8 +1,26 @@
-<div style="text-align: center;">
-    <h1>{{ title }}</h1>
-    <label for="username">User Name: </label>
-    <input type="text" [(ngModel)] = "username"><br><br>
-    <label for="password">Password: </label>
-    <input type="password" [(ngModel)] = "password"><br><br>
-    <button (click)="inputValidate()">Submit</button>
-</div>
+<mat-card class="myCard">
+    <mat-card-header>
+        <mat-card-title>
+        </mat-card-title>
+    </mat-card-header>
+    <mat-card-content>
+        <div style="text-align: center;">
+            <div>
+                <h1>{{ title }}</h1>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" [style.width.px]=300>
+                    <mat-label>User Name</mat-label>
+                    <input type="text" [(ngModel)] = "username" matInput placeholder="User Name">
+                </mat-form-field>
+            </div>
+            <div>
+                <mat-form-field appearance="outline" [style.width.px]=300>
+                    <mat-label>Password</mat-label>
+                    <input type="password" [(ngModel)] = "password" matInput placeholder="Password">
+                </mat-form-field>
+            </div>
+            <button mat-raised-button color="primary" (click)="inputValidate()">Submit</button>
+        </div>
+    </mat-card-content>
+</mat-card>
